force-app/main/default/objects/EYI_Tower__c/fields/EYI_OC_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_OC_Date__c</fullName>
    <label>OC Date</label>
    <type>Date</type>
</CustomField>