force-app/main/default/objects/EYI_Tower__c/fields/EYI_OC_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_OC_Number__c</fullName>
    <label>OC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>