force-app/main/default/objects/EYI_Tower__c/fields/EYI_Onboarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Onboarding_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store onboarding manager data.</description>
    <label>Onboarding Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>