force-app/main/default/objects/EYI_Tower__c/fields/EYI_Pass_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pass_Code__c</fullName>
    <label>Pass Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>