force-app/main/default/objects/EYI_Tower__c/fields/EYI_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Towers1</relationshipName>
    <type>Lookup</type>
</CustomField>