force-app/main/default/objects/EYI_Tower__c/fields/EYI_RERA_Certificate_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Certificate_Date__c</fullName>
    <label>RERA Certificate Date</label>
    <type>Date</type>
</CustomField>