force-app/main/default/objects/EYI_Tower__c/fields/EYI_RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Number__c</fullName>
    <label>RERA Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>