force-app/main/default/objects/EYI_Tower__c/fields/EYI_SAP_Delivery_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Delivery_Plant_Code__c</fullName>
    <label>SAP Delivery Plant Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>