force-app/main/default/objects/EYI_Tower__c/fields/EYI_SAP_Plant_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Plant_ID__c</fullName>
    <label>SAP Plant Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>