force-app/main/default/objects/EYI_Tower__c/fields/EYI_Total_2_Wheeler_Parking__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_2_Wheeler_Parking__c</fullName>
    <label>Total 2-Wheeler Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>