force-app/main/default/objects/EYI_Tower__c/fields/EYI_Tower_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower_Number__c</fullName>
    <label>Tower Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>