force-app/main/default/objects/EYI_Tower__c/fields/EYI_Tower_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower_Start_Date__c</fullName>
    <label>Tower Start Date</label>
    <type>Date</type>
</CustomField>